--- a/src/components/Resources/Resources.css
+++ b/src/components/Resources/Resources.css
@@ -1,7 +1,12 @@
 .resources {
-  margin-top: 20rem;
+  margin: 20rem 10% auto 10%;
+  text-align: center;
 }
 
 .resources-title {
   margin-bottom: 3rem;
+}
+
+.pd-link {
+  margin: 2rem;
 }
