--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,6 +1,6 @@
 .home {
   display: grid;
-  grid-template-columns: 2rem auto 2rem;
+  grid-template-columns: 5% auto 5%;
   margin-top: 15rem;
   background-color: lightgray;
 }
