--- a/src/components/JobListings/JobListings.css
+++ b/src/components/JobListings/JobListings.css
@@ -3,7 +3,7 @@
   height: 100%;
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fill, auto);
+  grid-template-columns: repeat(auto-fill, 25rem);
   grid-gap: 1rem;
   padding: 2rem;
   width: 100%;
