--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,7 +1,12 @@
 .about {
-  margin-top: 20rem;
+  margin: 20rem 10% auto 10%;
+  text-align: center;
 }
 
 .about-title {
   margin-bottom: 3rem;
+}
+
+.alice-link {
+  background-color: orange;
 }
