--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -2,5 +2,6 @@
   display: grid;
   grid-template-columns: 5% auto 5%;
   margin-top: 15rem;
+  padding-bottom: 5rem;
   background-color: lightgray;
 }
