--- a/src/components/JobDetail/JobDetail.css
+++ b/src/components/JobDetail/JobDetail.css
@@ -3,11 +3,20 @@
   overflow: scroll;
 }
 
-
 .title, .full-info-link, .user-interactions {
   margin: 1rem;
 }
 
 .title {
   color: rgb(23, 38, 64);
+}
+
+.marked {
+  background-color: rgb(23, 38, 64);
+  color: orange;
+}
+
+.marked:hover {
+  color: rgb(23, 38, 64);
+  background-color: white;
 }
